# calls_report_service

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
docker/: app.dockerfile  client.dockerfile
src/: config.py  consumer.py  dto.py  main.py  mongo.py  providers.py
tests/: test_handle_client_request.py
